# discord_cloud

./: CMakeLists.txt  readme.md
source/: entry_point.cpp  types.hpp
source/archiver/: archiver.cpp  archiver.hpp
source/compressor/: compressor.cpp  compressor.hpp
source/form/: form.cpp  form.hpp
source/form/channel_selector/: channel_selector.cpp  channel_selector.hpp
source/form/file_interface/: file_interface.cpp  file_interface.hpp
source/form/file_interface/internal/: strings.hpp  types.hpp  variables.hpp
source/form/file_interface/internal/functions/helpers/: helpers.cpp  helpers.hpp
source/form/file_interface/internal/functions/logic/generic/: generic.cpp  generic.hpp
source/form/file_interface/internal/functions/logic/modes/download/: download.cpp  download.hpp
source/form/file_interface/internal/functions/logic/modes/internal/: internal.cpp  internal.hpp
source/form/file_interface/internal/functions/logic/modes/upload/: upload.cpp  upload.hpp
source/form/file_interface/internal/loaders/: channel_emptiness_checker.hpp  channel_messages_loader.hpp  loader.hpp
source/helpers/: helpers.cpp  helpers.hpp
source/logger/: logger.cpp  logger.hpp
source/request_handler/: request_handler.cpp  request_handler.hpp
source/task/: task.cpp  task.hpp
